added saas and fonts

--- a/style/sass/main.scss
+++ b/style/sass/main.scss
@@ -1,6 +1,26 @@
+@font-face {
+  font-family: YekanBakh;
+  font-style: normal;
+  font-weight: normal;
+  src: url("../../assets/YekanBakh-Regular/YekanBakh-Regular.eot") format("eot"),
+    url("../../assets/YekanBakh-Regular/YekanBakh-Regular.ttf") format("ttf"),
+    url("../../assets/YekanBakh-Regular/YekanBakh-Regular.woff") format("woff");
+}
+
+@font-face {
+  font-family: YekanBakh;
+  font-style: normal;
+  font-weight: bold;
+  src: url("../../assets/YekanBakh-Bold/YekanBakh-Bold.eot") format("eot"),
+    url("../../assets/YekanBakh-Bold/YekanBakh-Bold.ttf") format("ttf"),
+    url("../../assets/YekanBakh-Bold/YekanBakh-Bold.woff") format("woff");
+}
+
 html,
 body {
   height: 100%;
+  font-family: YekanBakh;
+  font-weight: normal;
 }
 
 .wrapper {
@@ -15,8 +35,9 @@ body {
   background-color: white;
 }
 
-// .header {
-// }
+.header {
+  font-weight: bold;
+}
 // .main-title {
 // }
 // .sub-title {
