--- a/style/css/main.css
+++ b/style/css/main.css
@@ -1,6 +1,20 @@
+@font-face {
+  font-family: YekanBakh;
+  font-style: normal;
+  font-weight: normal;
+  src: url("../../assets/YekanBakh-Regular/YekanBakh-Regular.eot") format("eot"), url("../../assets/YekanBakh-Regular/YekanBakh-Regular.ttf") format("ttf"), url("../../assets/YekanBakh-Regular/YekanBakh-Regular.woff") format("woff"); }
+
+@font-face {
+  font-family: YekanBakh;
+  font-style: normal;
+  font-weight: bold;
+  src: url("../../assets/YekanBakh-Bold/YekanBakh-Bold.eot") format("eot"), url("../../assets/YekanBakh-Bold/YekanBakh-Bold.ttf") format("ttf"), url("../../assets/YekanBakh-Bold/YekanBakh-Bold.woff") format("woff"); }
+
 html,
 body {
-  height: 100%; }
+  height: 100%;
+  font-family: YekanBakh;
+  font-weight: normal; }
 
 .wrapper {
   height: 100%;
@@ -11,3 +25,6 @@ body {
   width: 1140px;
   margin: 0 auto;
   background-color: white; }
+
+.header {
+  font-weight: bold; }
