--- a/style/sass/_variables.scss
+++ b/style/sass/_variables.scss
@@ -1,15 +1,24 @@
 $container_width: 1140px;
 $background_gray: #f5f7fa;
 $primary_color: #20c5ba;
-$green_lighten_2: #0e7571;
-$green_darken_1: #155a6d;
-$green_darken_2: #0b3a42;
-$green_darken_3: #033432;
-$gray_lighen_1: #9db0cb;
-$gray_lighen_2: #697d9a;
-$gray_lighen_3: #6a7d9b;
-$gray_darken_1: #253343;
-$gray_darken_2: #042623;
+
+$green_darken_1: #0e7571;
+$green_darken_2: #155a6d;
+$green_darken_3: #0b3a42;
+$green_darken_4: #033432;
+
+$gray_ligthen_1: #f6f8fb;
+$gray_lighten_2: #e7ecf4;
+$gray_lighten_3: #eef2f7;
+$gray_lighten_4: #f5f7fa;
+$gray_lighen_4: #9db0cb;
+
+$gray_darken_1: #697d9a;
+$gray_darken_2: #6a7d9b;
+$gray_darken_3: #71839f;
+$gray_darken_4: #253343;
+$gray_darken_5: #042623;
+
 $silver_lighen_1: #6e6e6e;
 $silver_lighen_2: #585858;
 $silver_lighen_3: #4d4d4d;
