--- a/style/sass/main.scss
+++ b/style/sass/main.scss
@@ -1,6 +1,6 @@
 @import "./_fonts";
-@import "./variables";
-@import "./header.scss";
+@import "./_variables";
+@import "./_header.scss";
 
 //
 html,
