--- a/style/sass/_header.scss
+++ b/style/sass/_header.scss
@@ -2,6 +2,7 @@
 //
 
 .header {
+  background-color: $background_gray;
   font-weight: bold;
   display: flex;
   align-items: center;
@@ -10,10 +11,10 @@
   padding-bottom: 20px;
   .main-title {
     color: $green_darken_3;
-    font-size: 3rem;
+    font-size: 40px;
   }
   .sub-title {
-    font-size: 1.5rem;
+    font-size: $main_font_size;
     color: $green_darken_2;
   }
 }
