--- a/style/sass/_section_1.scss
+++ b/style/sass/_section_1.scss
@@ -1,23 +1,65 @@
 @import "./variables";
+@mixin flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@mixin flex-space-between {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+@mixin custom-icon {
+  .icon-wrapper {
+    background-color: $gray_lighten_2;
+    border-radius: 8px;
+    width: 50px;
+    height: 50px;
+    @include flex-center();
 
+    .icon-container {
+      width: 39px;
+      height: 39px;
+      border-radius: 8px;
+      background-color: $primary_color;
+      @include flex-center();
+
+      .fa-chevron-down {
+        color: white;
+      }
+    }
+  }
+}
+
+@mixin custom-list-style {
+  li .menu-text::before {
+    content: "\2022"; /* Add content: \2022 is the CSS Code/unicode for a bullet */
+    color: $primary_color;
+    font-weight: bold;
+    width: 1em;
+    margin-left: 1em;
+  }
+}
 .content {
-  padding: 55px 107px;
+  padding: 55px 57px;
+  border-radius: 16px;
+  border-top-right-radius: 0;
+  background-color: white;
   ul {
     list-style: none;
     li {
-      padding: 25px 0;
+      padding: 25px 50px;
+      &.active {
+        border: 3px solid $primary_color;
+        border-radius: 16px;
+      }
     }
-    li .menu-text::before {
-      content: "\2022"; /* Add content: \2022 is the CSS Code/unicode for a bullet */
-      color: $primary_color;
-      font-weight: bold;
-      width: 1em;
-      margin-left: 1em;
-    }
+
+    @include custom-icon();
   }
 
   .icon {
-    padding: 4px 8px 2px;
+    padding: 4px 9px 2px;
     background-color: $gray_lighten_2;
     border-radius: 50%;
 
@@ -36,6 +78,46 @@
     .fa-chevron-down {
       color: $gray_lighen_4;
       font-size: 10px;
+    }
+  }
+
+  .menu-details {
+    .title-list {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 60px;
+
+      .title-card {
+        background-color: $gray_ligthen_1;
+        width: 170px;
+        height: 160px;
+        border-radius: 16px;
+        @include flex-center();
+        flex-direction: column;
+
+        @include custom-icon();
+
+        .main-title {
+          color: $gray_darken_4;
+          font-size: 16px;
+          font-weight: bold;
+          padding-bottom: 10px;
+          padding-top: 15px;
+        }
+        .subtitle {
+          color: $gray_darken_2;
+          font-size: 16px;
+        }
+      }
+    }
+
+    .description {
+      padding: 60px 90px;
+      @include custom-icon();
+      ul {
+        @include custom-list-style();
+      }
     }
   }
 }
