--- a/style/sass/_variables.scss
+++ b/style/sass/_variables.scss
@@ -12,7 +12,8 @@ $gray_ligthen_1: #f6f8fb;
 $gray_lighten_2: #e7ecf4;
 $gray_lighten_3: #eef2f7;
 $gray_lighten_4: #f5f7fa;
-$gray_lighen_4: #9db0cb;
+$gray_lighten_5: #dbe4f2;
+$gray_lighten_6: #9db0cb;
 
 $gray_darken_1: #697d9a;
 $gray_darken_2: #6a7d9b;
