--- a/style/sass/main.scss
+++ b/style/sass/main.scss
@@ -1,13 +1,18 @@
 @import "./_fonts";
 @import "./_variables";
+@import "./mixins";
 @import "./_header.scss";
 @import "./iconic_tabs";
 @import "./section_1";
+@import "./section_2";
+@import "./section_3";
 
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
+
 ul {
   margin: 0;
 }
@@ -38,4 +43,48 @@ body {
 }
 .align-center {
   align-items: center;
+}
+
+.main-title {
+  color: $green_darken_3;
+  font-size: 40px;
+}
+
+.custom-title {
+  color: $gray_darken_4;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.icon-wrapper {
+  background-color: $gray_lighten_2;
+  border-radius: 8px;
+  width: 50px;
+  height: 50px;
+  @include flex-center();
+
+  .icon-container {
+    width: 39px;
+    height: 39px;
+    border-radius: 8px;
+    background-color: $primary_color;
+    @include flex-center();
+
+    .fa-chevron-down {
+      color: white;
+    }
+  }
+}
+
+.w100 {
+  width: 100%;
+}
+.w80 {
+  width: 80%;
+}
+.w50 {
+  width: 50%;
+}
+.w20 {
+  width: 20%;
 }
