--- a/style/sass/_mixins.scss
+++ b/style/sass/_mixins.scss
@@ -3,3 +3,12 @@
   justify-content: center;
   align-items: center;
 }
+
+@mixin active-file-uploader {
+  border: 1px solid $primary_color !important;
+  .file-btn {
+    background-color: $primary_color !important;
+    color: white !important;
+    border: 1px solid $primary_color !important;
+  }
+}
