--- a/style/sass/_section_3.scss
+++ b/style/sass/_section_3.scss
@@ -1,9 +1,3 @@
-@mixin active-file-uploader {
-  &:hover {
-    border: 2px solid $primary_color;
-  }
-}
-
 #section-3 {
   background-color: white;
   padding: 128px 0px 229px;
@@ -106,12 +100,17 @@
             background-color: white;
             margin-bottom: 0 !important;
             position: relative;
+            font-size: 14px;
+            font-weight: bold;
+            color: $primary_color;
 
             input[type="file"] {
               display: none !important;
             }
-
-            @include active-file-uploader;
+            &:hover,
+            &:active {
+              @include active-file-uploader;
+            }
           }
 
           .file-btn {
@@ -128,6 +127,7 @@
             border-left: 0;
             border-top: 0;
             padding: 10px;
+            font-family: YekanBakh;
           }
         }
       }
