--- a/style/css/main.css
+++ b/style/css/main.css
@@ -307,6 +307,11 @@
             border-top: 0;
             padding: 10px;
             font-family: YekanBakh; }
+          #section-3 .form-section .form-inputs-container .w50 .form-item .file-info {
+            font-size: 14px;
+            color: #9db0cb;
+            display: flex;
+            justify-content: end; }
 
 * {
   margin: 0;
