--- a/style/sass/_section_3.scss
+++ b/style/sass/_section_3.scss
@@ -129,6 +129,12 @@
             padding: 10px;
             font-family: YekanBakh;
           }
+          .file-info {
+            font-size: 14px;
+            color: $gray_lighten_6;
+            display: flex;
+            justify-content: end;
+          }
         }
       }
     }
