--- a/style/sass/_section_3.scss
+++ b/style/sass/_section_3.scss
@@ -129,11 +129,17 @@
             padding: 10px;
             font-family: YekanBakh;
           }
-          .file-info {
+          .file-info-container {
             font-size: 14px;
-            color: $gray_lighten_6;
             display: flex;
             justify-content: end;
+            .file-info {
+              color: $gray_lighten_6;
+            }
+            .file-warn {
+              color: red;
+              display: none;
+            }
           }
         }
       }
