--- a/style/css/main.css
+++ b/style/css/main.css
@@ -242,16 +242,33 @@
             padding: 1px 10px;
             font-size: 21px;
             font-weight: bold; }
-          #section-3 .form-section .form-inputs-container .w50 .form-item input {
+          #section-3 .form-section .form-inputs-container .w50 .form-item input,
+          #section-3 .form-section .form-inputs-container .w50 .form-item select,
+          #section-3 .form-section .form-inputs-container .w50 .form-item option {
+            background-color: white;
             width: 100%;
             height: 40px;
             border: 1px solid #dbe4f2;
             border-radius: 12px;
             outline: none;
             padding: 10px; }
-            #section-3 .form-section .form-inputs-container .w50 .form-item input:hover, #section-3 .form-section .form-inputs-container .w50 .form-item input:active, #section-3 .form-section .form-inputs-container .w50 .form-item input:focus, #section-3 .form-section .form-inputs-container .w50 .form-item input:focus-within, #section-3 .form-section .form-inputs-container .w50 .form-item input:focus-visible {
+            #section-3 .form-section .form-inputs-container .w50 .form-item input:hover, #section-3 .form-section .form-inputs-container .w50 .form-item input:active, #section-3 .form-section .form-inputs-container .w50 .form-item input:focus, #section-3 .form-section .form-inputs-container .w50 .form-item input:focus-within, #section-3 .form-section .form-inputs-container .w50 .form-item input:focus-visible,
+            #section-3 .form-section .form-inputs-container .w50 .form-item select:hover,
+            #section-3 .form-section .form-inputs-container .w50 .form-item select:active,
+            #section-3 .form-section .form-inputs-container .w50 .form-item select:focus,
+            #section-3 .form-section .form-inputs-container .w50 .form-item select:focus-within,
+            #section-3 .form-section .form-inputs-container .w50 .form-item select:focus-visible,
+            #section-3 .form-section .form-inputs-container .w50 .form-item option:hover,
+            #section-3 .form-section .form-inputs-container .w50 .form-item option:active,
+            #section-3 .form-section .form-inputs-container .w50 .form-item option:focus,
+            #section-3 .form-section .form-inputs-container .w50 .form-item option:focus-within,
+            #section-3 .form-section .form-inputs-container .w50 .form-item option:focus-visible {
               border: 2px solid #20c5ba;
               border-radius: 12px; }
+            #section-3 .form-section .form-inputs-container .w50 .form-item input:disabled,
+            #section-3 .form-section .form-inputs-container .w50 .form-item select:disabled,
+            #section-3 .form-section .form-inputs-container .w50 .form-item option:disabled {
+              background-color: #e7ecf4; }
           #section-3 .form-section .form-inputs-container .w50 .form-item ::placeholder {
             /* Chrome, Firefox, Opera, Safari 10.1+ */
             color: #9db0cb;
@@ -318,6 +335,15 @@
             #section-3 .form-section .form-inputs-container .w50 .form-item .file-info-container .file-warn {
               color: red;
               display: none; }
+          #section-3 .form-section .form-inputs-container .w50 .form-item .form-select-wrapper {
+            position: relative; }
+          #section-3 .form-section .form-inputs-container .w50 .form-item .icon {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            color: #9db0cb; }
+            #section-3 .form-section .form-inputs-container .w50 .form-item .icon:hover {
+              cursor: pointer; }
 
 * {
   margin: 0;
