--- a/style/sass/_section_3.scss
+++ b/style/sass/_section_3.scss
@@ -48,7 +48,10 @@
             font-weight: bold;
           }
 
-          input {
+          input,
+          select,
+          option {
+            background-color: white;
             width: 100%;
             height: 40px;
             border: 1px solid $gray_lighten_5;
@@ -63,6 +66,10 @@
             &:focus-visible {
               border: 2px solid $primary_color;
               border-radius: 12px;
+            }
+
+            &:disabled {
+              background-color: $gray_lighten_2;
             }
           }
 
@@ -139,6 +146,21 @@
             .file-warn {
               color: red;
               display: none;
+            }
+          }
+          .form-select-wrapper {
+            position: relative;
+          }
+          // .form-select {
+          // }
+          .icon {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            color: $gray_lighten_6;
+
+            &:hover {
+              cursor: pointer;
             }
           }
         }
