--- a/style/sass/_section_3.scss
+++ b/style/sass/_section_3.scss
@@ -51,6 +51,8 @@
           input,
           select,
           option {
+            font-family: YekanBakh;
+            font-size: $main_font_size;
             background-color: white;
             width: 100%;
             height: 40px;
@@ -166,9 +168,9 @@
             }
           }
 
-          .form-option-container {
+          ul.form-option-container {
             position: absolute;
-            top: -1px;
+            top: -2px;
             left: 0;
             margin-top: 2px;
             width: 100%;
@@ -176,22 +178,20 @@
             border: 1px solid #d5dde7;
             border-radius: 12px;
 
-            ul {
-              list-style: none;
+            list-style: none;
 
-              li {
-                height: 40px;
-                padding: 10px 20px;
-                font-size: 16px;
-                border-radius: 12px;
+            li {
+              height: 40px;
+              padding: 10px 20px;
+              font-size: 16px;
+              border-radius: 12px;
 
-                &:not(:first-of-type) {
-                  color: $gray_darken_2;
-                  &:hover {
-                    cursor: pointer;
-                    background-color: #e9edf5;
-                    color: $primary_color;
-                  }
+              &:not(:first-of-type) {
+                color: $gray_darken_2;
+                &:hover {
+                  cursor: pointer;
+                  background-color: #e9edf5;
+                  color: $primary_color;
                 }
               }
             }
